--- a/baraka-dairy/package.json
+++ b/baraka-dairy/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.15",
     "axios": "^1.6.2",
+    "baraka-dairy": "file:",
     "react": "18.2.0",
     "react-dotenv": "^0.1.3",
     "react-native": "^0.72.17",
@@ -23,7 +24,7 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-splash-screen": "^3.3.0",
